# casagui

./: .gitignore  .readthedocs.yaml  README.md  index.html  package-lock.json  package.json  package.json~  pylintrc  pyproject.toml  readme.rst  setup.cfg  tsconfig.json
.github/workflows/: publish.yml  pylint.yml
casagui/: README.rst  __init__.py  _resources.py  resources.py
casagui/__js__/: casaguijs.min.js  casalib.min.js
casagui/apps/: __init__.py  _createmask.py  _createregion.py  _interactiveclean.mustache  _interactiveclean.py  _interactiveclean_wrappers.py  _makemask.py  _ms_raster.py  _ms_scatter.py  _plotants.py  _plotants_logpos.py
casagui/bokeh/: __init__.py
casagui/casashell/: __init__.py  generic.mustache  iclean.mustache
casagui/data/: __init__.py  _ps_utils.py  _stats.py  _utils.py  _vis_data.py  _vis_stats.py  _xds_utils.py
casagui/io/: __init__.py  _ms_io.py  _vis_io.py
casagui/plot/: __init__.py  _ms_plot.py  _ms_plot_constants.py  _ms_plot_selectors.py  _panel_selectors.py  _plot_axes.py  _raster_plot.py  _raster_plot_inputs.py  _scatter_plot.py  _xds_plot_axes.py  _xds_raster_plot.py
casagui/plots/: __init__.py  _ms_plot.py  _ms_raster.py  _ms_scatter.py  _vis_plot.py  _vis_raster.py  _vis_scatter.py
casagui/private/: _gclean.py
casagui/proc/: imaging.py
casagui/remote/: __init__.py  _gclean.py  _local.py  _remote_kernel.py
casagui/toolbox/: __init__.py  _app_context.py  _cube.py  _region_list.py
casagui/utils/: _ResourceManager.py  __init__.py  _contextmgrchain.py  _conversion.py  _copydoc.py  _docenum.py  _image.py  _import_protected_module.py  _logging.py  _pkgs.py  _regions.py  _static.py  _tiles.py
casaguijs/: PACKAGE-ORIG.json  index.ts  package-lock.json  package.json  readme.md  tsconfig.json
casalib/: package.json  readme.rst  tsconfig.json
casalib/src/: array_funcs.ts  bimap_class.ts  boundedbimap_class.ts  browser.ts  eqset_class.ts  equals.ts  functional.ts  loop_funcs.ts  main.ts  object_id.test.ts  object_id.ts  reconnect_state.ts  string_funcs.ts  zip.ts
demos/iclean-jupyter/: iclean-jupyter-demo.ipynb
demos/iclean-simple/: .gitignore  requirements.txt  run-iclean.py
demos/interactive-jupyter/: iclean_demo.ipynb  old-requirements.txt  requirements.txt
demos/large-image/: large-dirty.py
demos/msplot-demos/: msmetadata-demo.py  msplot-demo.py  msraster-demo.py  msraster-waterfall-demo.py
demos/try-bitmask/: mask-overlay.py
demos/try-downsample/: try-scipy-interp2d-simple.py
devel/: readme.rst
devel/anaconda3/: c_dev.md  casa6-linux.yml  casa6-macos.yml  casa6-mpi-linux.yml  (+3 more)
docs/: Makefile  image-tool-labels.md  requirements.txt
frontend/: db.json
scripts/: expand_templates  fetchdata
src/: component.tsx  enchannel-zmq.js  index.ts  jmp.js  kernel-specs.js  kernels.ts  placeholder.html  utils.ts
test/: plotly-sample.html  test_plotants.py
(+373 files in other folders)
