[project]
name = "casagui"
dynamic = ["version"]
description = "visualization toolkit and apps for casa"
authors = [
    {name = "Darrell Schiebel", email = "darrell@schiebel.us"},
    {name = "Pam Harris", email = "pharris@nrao.edu"},
]

dependencies = [
    "bokeh>=3.1,<3.4",
    "astropy>=5.1",
    "regions>=0.6",
    "websockets>=10.3",
    "certifi",
    "matplotlib",
]
requires-python = ">=3.8"
readme = "readme.rst"
license = {text = "LGPL"}

[tool]
[tool.pdm]
[tool.pdm.build]
excludes = [ "casagui/apps/*.mustache", "casagui/private/casashell/*.mustache", "casagui/private/casatasks/*.mustache", "**/*.xml", "**/*.py-*", "**/*~" ]

[tool.pdm.version]
source = "scm"
write_to = "casagui/__version__.py"
write_template = "__version__ = '{}'"  # optional, default to "{}"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
