[metadata]
name = casagui
version = attr: casagui.__version__
author = CASA visualization team
author_email = aips2-request@nrao.edu
description = A small example package
long_description = file: README.md, LICENSE.rst
long_description_content_type = text/markdown
url = https://github.com/casangi/casagui
project_urls =
    Bug Tracker = https://github.com/casangi/casagui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL-2.1
    Operating System :: OS Independent

[options]
include_package_data = True
packages = casagui
           casagui.apps
           casagui.bokeh
           casagui.bokeh.components
           casagui.bokeh.sources
           casagui.bokeh.state
           casagui.bokeh.utils
           casagui.toolbox
           casagui.utils
python_requires = >=3.8
install_requires =
           python_version >= 3.8
           bokeh > 3.0
           matplotlib
           websockets
           astropy
           regions
           certifi
           scipy

[options.package_data]
* = bokeh/state/js/*.js, *.rst
